add project information to README

--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
       <h2>Other Projects</h2>
       <p>I do a lot! Here are some links to other projects I've made and shared online.</p>
     </div>
+    <div class="footer">
+      <p>© 2021 Matthew Eilar. All rights reserved.</p>
+    </div>
   </div>
 </body>
 </html>
