add fun facts sidebar text

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div class="container">
     <div class="welcome">
       <h1>Hi, I'm Matt.</h1>
-      <h2>Nice to meet you.</h2>
+      <h2><em>Nice to meet you.</em></h2>
       <img class="img-fluid" src="img/applestore.jpeg" alt="Photo of a man trading in a computer at the Apple Store">
       <img class="img-fluid" src="img/computerlab.jpeg" alt="Photo of a child using a computer in school in the early 1990s">
       <p>Welcome! I'm Matt Eilar, and this is a page I have put together to introduce myself and to submit for my first code review at Epicodus. Please feel free to say hi afterward!</p>
@@ -32,9 +32,18 @@
       <h2>Other Projects</h2>
       <p>I do a lot! Here are some links to other projects I've made and shared online.</p>
     </div>
-    <div class="footer">
-      <p>© 2021 Matthew Eilar. All rights reserved.</p>
+    <div class="facts">
+      <h3>Here are some fun facts about me:</h3>
+      <ul>
+        <li>I can ride a horse and drive a team of draft horses.</li>
+        <li>There is no home theater, A/V setup, or stereo system problem that I cannot fix.</li>
+        <li>Our first home computer was <strong>MS-DOS 3.1</strong>. My elementary school computers were <strong>Apple IIe's</strong>. My first laptop was a <strong>Windows ME</strong> machine with a 6 GB hard drive.</li>
+        <li>I can play the pipe organ.</li>
+      </ul>
     </div>
+  </div>
+  <div class="footer">
+    <p><span class="copyright">© 2021 Matthew Eilar. All rights reserved.</span></p>
   </div>
 </body>
 </html>
