add software project text, images, and css card styling

--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 <head>
   <title>Meet Matt</title>
   <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
 </head>
 <body>
   <div class="container">
@@ -27,6 +30,49 @@
     </div>
     <div class="coding">
       <h2>Software Projects</h2>
+      <p>Here are some software projects I have made that I am proud of</p>
+      <div class="card-group">
+        <div class="card border-dark"">
+          <div class="card-body">
+            <h5 class="card-title">Dinky the Cat</h5>
+            <img class="card-img-top" src="img/dinky.jpeg" alt="screenshot of cat website">
+            <p class="card-text">This is a small website I built to celebrate the cat that lives in my apartment complex.</p> 
+            <p><span class="html-lang">HTML</span> <span class="css-lang">CSS</span></p>
+            <a href="https://meilar.github.io/dinky" class="btn btn-dark align-self-end" style="margin-top: auto">View on Github Pages</a>
+          </div>
+        </div>
+        <div class="card border-dark"">
+          <div class="card-body">
+            <h5 class="card-title">Band Instrument Picker</h5>
+            <img class="card-img-top" src="img/jsreview.jpeg" alt="screenshot of buzfeed clone website">
+            <p class="card-text">This is a <em>Buzzfeed</em>-style quiz that sarcastically assigns you a band instrument to play.</p>
+            <p><span class="html-lang">HTML</span><span class="css-lang">CSS</span></p>
+            <p><span class="js-lang">JavaScript</span></p>
+            <a href="https://meilar.github.io/js-review" class="btn btn-dark align-self-end" style="margin-top: auto">View on Github Pages</a>
+          </div>
+        </div>
+        <div class="card border-dark"">
+          <div class="card-body">
+            <h5 class="card-title">Madlib Generator</h5>
+            <img class="card-img-top" src="img/madlib.jpeg" alt="screenshot of madlib generator website">
+            <p class="card-text">This is a small site that uses user-generated form responses to return a story.</p>
+            <p><span class="html-lang">HTML</span><span class="css-lang">CSS</span></p>
+            <p><span class="js-lang">JavaScript</span></p>
+            <a href="https://meilar.github.io/madlib" class="btn btn-dark align-self-end" style="margin-top: auto;">View on Github Pages</a>
+          </div>
+        </div>
+        <div class="card border-dark"">
+          <div class="card-body">
+            <h5 class="card-title">Original Portfolio</h5>
+            <img class="card-img-top" src="img/portfolio.jpeg" alt="screenshot of portfolio website">
+            <p class="card-text">This is the first portfolio website that I put together for the Epicodus program in 2019. Less polish, more personality!</p>
+            <p><span class="html-lang">HTML</span><span class="css-lang">CSS</span></p>
+            <p><span class="js-lang">JavaScript</span></p>
+            <p><span class="boot-lang">Bootstrap 4</span></p>
+            <a href="https://meilar.github.io/portfolio" class="btn btn-dark align-self-end" style="margin-top: auto;">View on Github Pages</a>
+          </div>
+        </div>
+      </div> 
     </div>
     <div class="projects">
       <h2>Other Projects</h2>
