applied column styling to images and resized images for layout

--- a/index.html
+++ b/index.html
@@ -16,8 +16,14 @@
     <div class="welcome">
       <h1>Hi, I'm Matt.</h1>
       <h2><em>Nice to meet you.</em></h2>
-      <img class="img-fluid" src="img/applestore.jpeg" alt="Photo of a man trading in a computer at the Apple Store">
-      <img class="img-fluid" src="img/computerlab.jpeg" alt="Photo of a child using a computer in school in the early 1990s">
+      <div class="row">
+        <div class="col-sm">
+          <img class="img-fluid col-sm" src="img/computerlab.jpeg" alt="Photo of a child using a computer in school in the early 1990s"> 
+        </div>
+        <div class="col-sm">
+          <img class="img-fluid col-sm" src="img/applestore.jpeg" alt="Photo of a man trading in a computer at the Apple Store">
+        </div>
+      </div>
       <p>Welcome! I'm Matt Eilar, and this is a page I have put together to introduce myself and to submit for my first code review at Epicodus. Please feel free to say hi afterward!</p>
     </div>
     <div class="about">
