add image hover effect styling to welcome section

--- a/index.html
+++ b/index.html
@@ -17,11 +17,17 @@
       <h1>Hi, I'm Matt.</h1>
       <h2><em>Nice to meet you.</em></h2>
       <div class="row">
-        <div class="col-sm">
-          <img class="img-fluid col-sm" src="img/computerlab.jpeg" alt="Photo of a child using a computer in school in the early 1990s"> 
+        <div class="col-sm img__wrap">
+          <img class="img-fluid col-sm img__img" src="img/computerlab.jpeg" alt="Photo of a child using a computer in school in the early 1990s">
+          <div class="img__description_layer">
+            <p class="img__description">At 6 years old, using Reader Rabbit on an Apple IIe at Barbara Webster Elementary School.</p>
+          </div> 
         </div>
-        <div class="col-sm">
-          <img class="img-fluid col-sm" src="img/applestore.jpeg" alt="Photo of a man trading in a computer at the Apple Store">
+        <div class="col-sm img__wrap">
+          <img class="img-fluid col-sm img__img" src="img/applestore.jpeg" alt="Photo of a man trading in a computer at the Apple Store">
+          <div class="img__description_layer">
+            <p class="img__description">At 31 years old, trading in a beloved 2017 11" Macbook Air to buy a new computer to start a coding program.</p>
+          </div> 
         </div>
       </div>
       <p>Welcome! I'm Matt Eilar, and this is a page I have put together to introduce myself and to submit for my first code review at Epicodus. Please feel free to say hi afterward!</p>
