add space between body sections and add background color and texture

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <div class="container">
-    <div class="welcome">
+    <div class="welcome section">
       <h1>Hi, I'm Matt.</h1>
       <h2><em>Nice to meet you.</em></h2>
       <div class="row">
@@ -32,15 +32,15 @@
       </div>
       <p>Welcome! I'm Matt Eilar, and this is a page I have put together to introduce myself and to submit for my first code review at Epicodus. Please feel free to say hi afterward!</p>
     </div>
-    <div class="about">
+    <div class="about section">
       <h2>About Me</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Posuere morbi leo urna molestie at elementum eu facilisis. Nulla facilisi etiam dignissim diam quis enim lobortis scelerisque. Iaculis eu non diam phasellus vestibulum lorem sed risus ultricies. Elementum nisi quis eleifend quam adipiscing vitae. Et leo duis ut diam quam nulla porttitor massa. Id leo in vitae turpis massa sed elementum tempus egestas. Nibh tortor id aliquet lectus. Enim nec dui nunc mattis enim ut tellus elementum. Ac feugiat sed lectus vestibulum. Aenean et tortor at risus viverra. Morbi blandit cursus risus at ultrices mi tempus imperdiet nulla.</p>
     </div>
-    <div class="career">
+    <div class="career section">
       <h2>Why I am changing careers</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Posuere morbi leo urna molestie at elementum eu facilisis. Nulla facilisi etiam dignissim diam quis enim lobortis scelerisque. Iaculis eu non diam phasellus vestibulum lorem sed risus ultricies. Elementum nisi quis eleifend quam adipiscing vitae. Et leo duis ut diam quam nulla porttitor massa. Id leo in vitae turpis massa sed elementum tempus egestas. Nibh tortor id aliquet lectus. Enim nec dui nunc mattis enim ut tellus elementum. Ac feugiat sed lectus vestibulum. Aenean et tortor at risus viverra. Morbi blandit cursus risus at ultrices mi tempus imperdiet nulla.</p>
     </div>
-    <div class="coding">
+    <div class="coding section">
       <h2>Software Projects</h2>
       <p>Here are some software projects I have made that I am proud of</p>
       <div class="card-group">
@@ -86,7 +86,7 @@
         </div>
       </div> 
     </div>
-    <div class="projects">
+    <div class="projects section">
       <h2>Other Projects</h2>
       <p>I do a lot! Here are some links to other projects I've made and shared online.</p>
     </div>
