standardize secondary color, float sidebar

--- a/index.html
+++ b/index.html
@@ -32,16 +32,25 @@
       </div>
       <p>Welcome! I'm Matt Eilar, and this is a page I have put together to introduce myself and to submit for my first code review at Epicodus. Please feel free to say hi afterward!</p>
     </div>
+    <div class="facts sidebar">
+      <h2>fun facts</h2>
+      <ul>
+        <li>I can ride a horse and drive a team of draft horses.</li>
+        <li>There is no home theater, A/V setup, or stereo system problem that I cannot fix.</li>
+        <li>Our first home computer was <strong>MS-DOS 3.1</strong>. My elementary school computers were <strong>Apple IIe's</strong>. My first laptop was a <strong>Windows ME</strong> machine with a 6 GB hard drive.</li>
+        <li>I can play the pipe organ.</li>
+      </ul>
+    </div>
     <div class="about section">
-      <h2>About Me</h2>
+      <h2>about</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Posuere morbi leo urna molestie at elementum eu facilisis. Nulla facilisi etiam dignissim diam quis enim lobortis scelerisque. Iaculis eu non diam phasellus vestibulum lorem sed risus ultricies. Elementum nisi quis eleifend quam adipiscing vitae. Et leo duis ut diam quam nulla porttitor massa. Id leo in vitae turpis massa sed elementum tempus egestas. Nibh tortor id aliquet lectus. Enim nec dui nunc mattis enim ut tellus elementum. Ac feugiat sed lectus vestibulum. Aenean et tortor at risus viverra. Morbi blandit cursus risus at ultrices mi tempus imperdiet nulla.</p>
     </div>
     <div class="career section">
-      <h2>Why I am changing careers</h2>
+      <h2>career change</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Posuere morbi leo urna molestie at elementum eu facilisis. Nulla facilisi etiam dignissim diam quis enim lobortis scelerisque. Iaculis eu non diam phasellus vestibulum lorem sed risus ultricies. Elementum nisi quis eleifend quam adipiscing vitae. Et leo duis ut diam quam nulla porttitor massa. Id leo in vitae turpis massa sed elementum tempus egestas. Nibh tortor id aliquet lectus. Enim nec dui nunc mattis enim ut tellus elementum. Ac feugiat sed lectus vestibulum. Aenean et tortor at risus viverra. Morbi blandit cursus risus at ultrices mi tempus imperdiet nulla.</p>
     </div>
     <div class="coding section">
-      <h2>Software Projects</h2>
+      <h2>code</h2>
       <p>Here are some software projects I have made that I am proud of</p>
       <div class="card-group">
         <div class="card border-dark"">
@@ -55,7 +64,7 @@
         </div>
         <div class="card border-dark"">
           <div class="card-body">
-            <h5 class="card-title">Band Instrument Picker</h5>
+            <h5 class="card-title">Instrument Quiz</h5>
             <img class="card-img-top" src="img/jsreview.jpeg" alt="screenshot of buzfeed clone website">
             <p class="card-text">This is a <em>Buzzfeed</em>-style quiz that sarcastically assigns you a band instrument to play.</p>
             <p><span class="html-lang">HTML</span><span class="css-lang">CSS</span></p>
@@ -87,17 +96,8 @@
       </div> 
     </div>
     <div class="projects section">
-      <h2>Other Projects</h2>
+      <h2>other work</h2>
       <p>I do a lot! Here are some links to other projects I've made and shared online.</p>
-    </div>
-    <div class="facts">
-      <h3>Here are some fun facts about me:</h3>
-      <ul>
-        <li>I can ride a horse and drive a team of draft horses.</li>
-        <li>There is no home theater, A/V setup, or stereo system problem that I cannot fix.</li>
-        <li>Our first home computer was <strong>MS-DOS 3.1</strong>. My elementary school computers were <strong>Apple IIe's</strong>. My first laptop was a <strong>Windows ME</strong> machine with a 6 GB hard drive.</li>
-        <li>I can play the pipe organ.</li>
-      </ul>
     </div>
   </div>
   <div class="footer">
