add ordered list self defninitions

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           </div> 
         </div>
       </div>
-      <p>Welcome! I'm Matt Eilar, and this is a page I have put together to introduce myself and to submit for my first code review at Epicodus. Please feel free to say hi afterward!</p>
+      <p class="intro">Welcome! I'm Matt Eilar, and this is a page I have put together to introduce myself and to submit for my first code review at Epicodus. Please feel free to say hi afterward!</p>
     </div>
     <div class="facts sidebar">
       <h2>fun facts</h2>
@@ -40,6 +40,16 @@
         <li>Our first home computer was <strong>MS-DOS 3.1</strong>. My elementary school computers were <strong>Apple IIe's</strong>. My first laptop was a <strong>Windows ME</strong> machine with a 6 GB hard drive.</li>
         <li>I can play the pipe organ.</li>
       </ul>
+    </div>
+    <div class="matt section">
+      <h2>matt eilar (n)</h2>
+      <ol>
+        <li>a son of Southern California, shaped by sagebrush, chapparel forests, and the limbs of live oak trees.</li>
+        <li>a musician who plays keyboard instruments, a singer with a fine tenor voice, a writer still looking for places to put his words.</li>
+        <li>cherished by his brothers and sisters, belovèd by his boyfriend, condemned to a thousand hells by his enemies.</li>
+        <li>the crossroads by which white New England <em>Mayflower</em> descendants, southwestern silver miners, California migrant farmworkers, and Chihuahuan rancheros converge.</li>
+
+      </ol>
     </div>
     <div class="about section">
       <h2>about</h2>
@@ -51,7 +61,7 @@
     </div>
     <div class="coding section">
       <h2>code</h2>
-      <p>Here are some software projects I have made that I am proud of</p>
+      <p class="intro">I am still at the beginning of my journey toward becoming a software developer. Here are some software projects I have made along the way that I am proud of.</p>
       <div class="card-group">
         <div class="card border-dark"">
           <div class="card-body">
@@ -89,7 +99,7 @@
             <p class="card-text">This is the first portfolio website that I put together for the Epicodus program in 2019. Less polish, more personality!</p>
             <p><span class="html-lang">HTML</span><span class="css-lang">CSS</span></p>
             <p><span class="js-lang">JavaScript</span></p>
-            <p><span class="boot-lang">Bootstrap 4</span></p>
+            <p><span class="boot-lang">Bootstrap</span></p>
             <a href="https://meilar.github.io/portfolio" class="btn btn-dark align-self-end" style="margin-top: auto;">View on Github Pages</a>
           </div>
         </div>
