--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div class="container">
+  <div class="container-md">
     <div class="welcome section">
       <h1>Hi, I'm Matt.</h1>
       <h2><em>Nice to meet you.</em></h2>
@@ -30,7 +30,6 @@
           </div> 
         </div>
       </div>
-      <p class="intro">Welcome! I'm Matt Eilar, and this is a page I have put together to introduce myself and to submit for my first code review at Epicodus. Please feel free to say hi afterward!</p>
     </div>
     <div class="facts sidebar">
       <h2>fun facts</h2>
@@ -47,13 +46,13 @@
         <li>a son of Southern California, shaped by sagebrush, chapparel forests, and the limbs of live oak trees.</li>
         <li>a musician who plays keyboard instruments, a singer with a fine tenor voice, a writer still looking for places to put his words.</li>
         <li>cherished by his brothers and sisters, belovèd by his boyfriend, condemned to a thousand hells by his enemies.</li>
-        <li>the crossroads by which white New England <em>Mayflower</em> descendants, southwestern silver miners, California migrant farmworkers, and Chihuahuan rancheros converge.</li>
-
+        <li>the crossroads in which Bostonian <em>Mayflower</em> descendants, New Mexican silver miners, California migrant farmworkers, and Chihuahuan rancheros converge.</li>
       </ol>
     </div>
     <div class="about section">
-      <h2>about</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Posuere morbi leo urna molestie at elementum eu facilisis. Nulla facilisi etiam dignissim diam quis enim lobortis scelerisque. Iaculis eu non diam phasellus vestibulum lorem sed risus ultricies. Elementum nisi quis eleifend quam adipiscing vitae. Et leo duis ut diam quam nulla porttitor massa. Id leo in vitae turpis massa sed elementum tempus egestas. Nibh tortor id aliquet lectus. Enim nec dui nunc mattis enim ut tellus elementum. Ac feugiat sed lectus vestibulum. Aenean et tortor at risus viverra. Morbi blandit cursus risus at ultrices mi tempus imperdiet nulla.</p>
+      <h2>background</h2>
+      <p>My animating passion is for <strong>exploration</strong> and to discover <strong>new connections and patterns</strong> in the world around us. After studying Music History at Reed College, I started working in Portland, Oregon area non-profits, completing successful terms in <strong>administrative and operations</strong> roles at an organization dedicated to youth and family services, then performing arts. In March 2020, I was an <strong>essential part of pivoting</strong> the Portland Baroque Orchestra to an all-digital season, both as part of an administrative team and directly as a <strong>recording assistant and video editor</strong>. In autumn 2021, I left PBO to pursue <strong>more challenging and intellectually stimulating work</strong>. I am pursuing work on the path toward a career change to software and web development.</p>
+
     </div>
     <div class="career section">
       <h2>career change</h2>
@@ -107,7 +106,7 @@
     </div>
     <div class="projects section">
       <h2>other work</h2>
-      <p>I do a lot! Here are some links to other projects I've made and shared online.</p>
+      <p class="intro">I do a lot! Here are some links to other projects I've made and shared online.</p>
     </div>
   </div>
   <div class="footer">
