add clickable linkedin badge to career section

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Meet Matt</title>
+  <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
   <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
@@ -10,6 +11,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
+  
 </head>
 <body>
   <div class="container-md">
@@ -57,6 +59,7 @@
       <h2>career change</h2>
       <p>When I was going through high school, it was still a new idea that you could submit school work electronically. One of my teachers still accepted handwritten papers! Facebook arrived on campus sophomore year, and <strong> we all could see that the internet was going to change everything but coding wasn't yet treated as a skill that everyone could learn.</strong> Java was offered as an elective, but only if you had finished calculus. I was not a math loving teenager, and I was never going to make it in the door of a calculus class, let alone finish one. So I never thought that computer programming was a realistic career path.</p>
       <p>In 2019, I took an introductory programming class in Portland, and <strong>that experience opened me up to the idea that I could be successful</strong> as a software or web developer. It took me a couple more years to figure out how to attend a full time learning program. The COVID-19 crisis was the straw that broke the camel's back. My job description was shifting all the time and I was ready to take a big leap into change. <strong>I am very excited to find out what happens next.</strong></p>
+      <a href="https://www.linkedin.com/in/eilar-503"><img id="linkedin" src="img/linkedin.png" alt="linkedin icon"></a>
     </div>
     <div class="coding section">
       <h2>code</h2>
