add list group with links out to other projects

--- a/index.html
+++ b/index.html
@@ -64,13 +64,14 @@
     <div class="coding section">
       <h2>code</h2>
       <p class="intro">I am still at the beginning of my journey toward becoming a software developer. Here are some software projects I have made along the way that I am proud of.</p>
-      <div class="card-group">
+      <div class="card-deck">
         <div class="card border-dark"">
           <div class="card-body">
             <h5 class="card-title">Dinky the Cat</h5>
             <img class="card-img-top" src="img/dinky.jpeg" alt="screenshot of cat website">
             <p class="card-text">This is a small website I built to celebrate the cat that lives in my apartment complex.</p> 
-            <p><span class="html-lang">HTML</span> <span class="css-lang">CSS</span></p>
+            <p><span class="html-lang">HTML</span></p>
+            <p><span class="css-lang">CSS</span></p>
             <a href="https://meilar.github.io/dinky" class="btn btn-dark align-self-end" style="margin-top: auto">View on Github Pages</a>
           </div>
         </div>
@@ -79,7 +80,8 @@
             <h5 class="card-title">Instrument Quiz</h5>
             <img class="card-img-top" src="img/jsreview.jpeg" alt="screenshot of buzfeed clone website">
             <p class="card-text">This is a <em>Buzzfeed</em>-style quiz that sarcastically assigns you a band instrument to play.</p>
-            <p><span class="html-lang">HTML</span><span class="css-lang">CSS</span></p>
+            <p><span class="html-lang">HTML</span></p>
+            <p><span class="css-lang">CSS</span></p>
             <p><span class="js-lang">JavaScript</span></p>
             <a href="https://meilar.github.io/js-review" class="btn btn-dark align-self-end" style="margin-top: auto">View on Github Pages</a>
           </div>
@@ -89,7 +91,8 @@
             <h5 class="card-title">Madlib Generator</h5>
             <img class="card-img-top" src="img/madlib.jpeg" alt="screenshot of madlib generator website">
             <p class="card-text">This is a small site that uses user-generated form responses to return a story.</p>
-            <p><span class="html-lang">HTML</span><span class="css-lang">CSS</span></p>
+            <p><span class="html-lang">HTML</span></p>
+            <p><span class="css-lang">CSS</span></p>
             <p><span class="js-lang">JavaScript</span></p>
             <a href="https://meilar.github.io/madlib" class="btn btn-dark align-self-end" style="margin-top: auto;">View on Github Pages</a>
           </div>
@@ -99,7 +102,8 @@
             <h5 class="card-title">Original Portfolio</h5>
             <img class="card-img-top" src="img/portfolio.jpeg" alt="screenshot of portfolio website">
             <p class="card-text">This is the first portfolio website that I put together for the Epicodus program in 2019. Less polish, more personality!</p>
-            <p><span class="html-lang">HTML</span><span class="css-lang">CSS</span></p>
+            <p><span class="html-lang">HTML</span></p>
+            <p><span class="css-lang">CSS</span></p>
             <p><span class="js-lang">JavaScript</span></p>
             <p><span class="boot-lang">Bootstrap</span></p>
             <a href="https://meilar.github.io/portfolio" class="btn btn-dark align-self-end" style="margin-top: auto;">View on Github Pages</a>
@@ -110,10 +114,33 @@
     <div class="projects section">
       <h2>other work</h2>
       <p class="intro">I do a lot! Here are some links to other projects I've made and shared online.</p>
+      <div class="list-group">
+        <a href="https://open.spotify.com/album/36B7GthUYXtb8y4TcWnM4c?si=C7wk5abURwywmCjTmrLNBg" class="list-group-item list-group-item-action flex-column align-items-start">
+          <h5 class="mb-1">Postwar Radio</h5>
+          <small>I used to play keyboards and write songs in an indie rock band. Click here to listen to our album on Spotify.</small>
+        </a>
+        <a href="https://www.mattheweilar.com/video-editing" class="list-group-item list-group-item-action flex-column align-items-start">
+          <h5 class="mb-1">Video Editing</h5>
+          <small>In 2020-21, I had to learn how to become a video production assistant and editor very quickly. Click here to go to my online portfolio to see examples of my work.</small>
+        </a>
+        <a href="https://vimeo.com/211030223?embedded=true&source=vimeo_logo&owner=48300036" class="list-group-item list-group-item-action flex-column align-items-start">
+          <h5 class="mb-1">Piano Playing</h5>
+          <small>I've been playing piano for almost 25 years. Click here to see a set I performed for the Portland Piano International's Piano Day celebration at the Washington Park MAX stop in 2015. My performance starts at about 1:30:00</small>
+        </a>
+        <a href="https://www.hammerandjack.com" class="list-group-item list-group-item-action flex-column align-items-start">
+          <h5 class="mb-1">Blogging</h5>
+          <small>I've been an infrequent but consistent personal blogger since 2007. Click here to go to my current personal blog.</small>
+        </a>
+        <a href="https://www.youtube.com/watch?v=_PyvPscqfJA&ab_channel=MattEilar" class="list-group-item list-group-item-action flex-column align-items-start">
+          <h5 class="mb-1">Singing</h5>
+          <small>I love to sing. Since moving to Portland, I have sung with the Reed College Collegium, Portland Symphonic Choir in concert with the Oregon Symphony, and Portland Gay Men's Chorus. Click here to watch a video of me performing a solo recital of Ralph Vaughan Williams' <em>Six Mystical Songs</em>.</small>
+        </a>
+      </div>
     </div>
-  </div>
-  <div class="footer">
+    <div class="footer">
     <p><span class="copyright">© 2021 Matthew Eilar. All rights reserved.</span></p>
+  
+    </div>
   </div>
 </body>
 </html>
