fix syntax errors in div class tags, updated licensing section in README, added more steps to installation instructions for opening a webpage

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <h2>code</h2>
       <p class="intro">I am still at the beginning of my journey toward becoming a software developer. Here are some software projects I have made along the way that I am proud of.</p>
       <div class="card-deck">
-        <div class="card border-dark"">
+        <div class="card border-dark">
           <div class="card-body">
             <h5 class="card-title">Dinky the Cat</h5>
             <img class="card-img-top" src="img/dinky.jpeg" alt="screenshot of cat website">
@@ -75,7 +75,7 @@
             <a href="https://meilar.github.io/dinky" class="btn btn-dark align-self-end" style="margin-top: auto">View on Github Pages</a>
           </div>
         </div>
-        <div class="card border-dark"">
+        <div class="card border-dark">
           <div class="card-body">
             <h5 class="card-title">Instrument Quiz</h5>
             <img class="card-img-top" src="img/jsreview.jpeg" alt="screenshot of buzfeed clone website">
@@ -86,7 +86,7 @@
             <a href="https://meilar.github.io/js-review" class="btn btn-dark align-self-end" style="margin-top: auto">View on Github Pages</a>
           </div>
         </div>
-        <div class="card border-dark"">
+        <div class="card border-dark">
           <div class="card-body">
             <h5 class="card-title">Madlib Generator</h5>
             <img class="card-img-top" src="img/madlib.jpeg" alt="screenshot of madlib generator website">
@@ -97,7 +97,7 @@
             <a href="https://meilar.github.io/madlib" class="btn btn-dark align-self-end" style="margin-top: auto;">View on Github Pages</a>
           </div>
         </div>
-        <div class="card border-dark"">
+        <div class="card border-dark">
           <div class="card-body">
             <h5 class="card-title">Original Portfolio</h5>
             <img class="card-img-top" src="img/portfolio.jpeg" alt="screenshot of portfolio website">
